force-app/main/default/objects/sumoapp__Availability__c/sumoapp__Availability__c.object-meta.xml
<CustomObject>
    <label>SUMO Availability</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>