force-app/main/default/objects/sumoapp__Availability__c/fields/sumoapp__Group__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Group__c</fullName>
    <label>Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>