force-app/main/default/objects/sumoapp__Availability__c/fields/sumoapp__IsActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Activation indicator. If true then will be included to WHEN page algorithm, if flase then not</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>