force-app/main/default/objects/sumoapp__Availability__c/fields/sumoapp__Location__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>sumoapp__Location__c</referenceTo>
    <relationshipLabel>Location Availabilities</relationshipLabel>
    <relationshipName>LocationAvailabilities</relationshipName>
    <type>Lookup</type>
</CustomField>