force-app/main/default/objects/sumoapp__Availability__c/fields/sumoapp__User__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Availabilities</relationshipLabel>
    <relationshipName>UserAvailabilities</relationshipName>
    <type>Lookup</type>
</CustomField>