force-app/main/default/objects/sumoapp__Availability__c/recordTypes/sumoapp__DateSpecific.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__DateSpecific</fullName>
    <active>true</active>
    <description>Date specific availability</description>
    <label>Date Specific</label>
</RecordType>