force-app/main/default/objects/sumoapp__Availability__c/recordTypes/sumoapp__Recurring.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Recurring</fullName>
    <active>true</active>
    <description>Recurring availability</description>
    <label>Recurring</label>
</RecordType>